--- a/src/apply_logreg.ipynb
+++ b/src/apply_logreg.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TB = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "TB.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/TB_MIBI_atlas/quantification/processed/TB/kfolds')"
+    "TB = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "TB.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/TB_MIBI_atlas/quantification/processed/TB/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -167,8 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sarc = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "sarc.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/TB_MIBI_atlas/quantification/processed/sarc/kfolds')"
+    "sarc = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "sarc.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/TB_MIBI_atlas/quantification/processed/sarc/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,8 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tonsil_codex = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "tonsil_codex.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tonsil_CODEX/quantification/processed/kfolds')"
+    "tonsil_codex = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "tonsil_codex.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tonsil_CODEX/quantification/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -214,8 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tonsil_CODEX2 = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "tonsil_CODEX2.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tonsil_CODEX2/quantification/processed/kfolds')"
+    "tonsil_CODEX2 = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "tonsil_CODEX2.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/tonsil_CODEX2/quantification/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lymphoma_CODEX = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "lymphoma_CODEX.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/lymphoma_CODEX/quantification/processed/kfolds')"
+    "lymphoma_CODEX = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "lymphoma_CODEX.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/lymphoma_CODEX/quantification/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -261,8 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intestine_CODEX = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "intestine_CODEX.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/intestine_CODEX/quantification/processed/kfolds')"
+    "intestine_CODEX = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "intestine_CODEX.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/intestine_CODEX/quantification/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,8 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feto_maternal = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "feto_maternal.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/feto_maternal/quantification/processed/kfolds')"
+    "feto_maternal = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "feto_maternal.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/feto_maternal/quantification/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -308,8 +308,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CRC_FFPE = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "CRC_FFPE.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/CRC_FFPE/quantification/processed/kfolds')"
+    "CRC_FFPE = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "CRC_FFPE.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/CRC_FFPE/quantification/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -327,8 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BE_tonsil = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "BE_tonsil.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/BE_tonsil/processed/kfolds')"
+    "BE_tonsil = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "BE_tonsil.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/BE_tonsil/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -346,8 +346,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tonsil_training = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "tonsil_training.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/tonsil_training/processed/kfolds')"
+    "tonsil_training = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "tonsil_training.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/BA_CODEX/quantification/tonsil_training/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,8 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AML = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "AML.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/kfolds')"
+    "AML =Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "AML.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/AML/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -393,8 +393,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "healthy_BM = MultinomialLogisticRegression(random_state = rs, n_jobs=-1)\n",
-    "healthy_BM.train_and_evaluate_manual(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/kfolds')"
+    "healthy_BM = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "healthy_BM.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/kfolds', n_processes=10, param_grid = param_grid)"
    ]
   },
   {
@@ -404,6 +404,25 @@
    "outputs": [],
    "source": [
     "healthy_BM.save_results(save_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/results_logreg', label_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/AML_bone_marrow/quantification/healthy_BM/processed/labels.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "breast_fibro_IMC = Tune_Eval(random_state = rs, model = 'logistic_regression')\n",
+    "breast_fibro_IMC.train_tune_evaluate(path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/breast_fibro_IMC/quantification/processed/kfolds', n_processes=8, param_grid = param_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "breast_fibro_IMC.save_results(save_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/breast_fibro_IMC/results_logreg', label_path='/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/breast_fibro_IMC/quantification/processed/labels.csv')"
    ]
   }
  ],
