--- a/src/preprocessing/datasets/process_cHL_CODEX.ipynb
+++ b/src/preprocessing/datasets/process_cHL_CODEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,373 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cellLabel</th>\n",
-       "      <th>X_cent</th>\n",
-       "      <th>Y_cent</th>\n",
-       "      <th>cellSize</th>\n",
-       "      <th>cellType</th>\n",
-       "      <th>BCL.2</th>\n",
-       "      <th>CCR6</th>\n",
-       "      <th>CD11b</th>\n",
-       "      <th>CD11c</th>\n",
-       "      <th>CD15</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PD.L1</th>\n",
-       "      <th>Podoplanin</th>\n",
-       "      <th>T.bet</th>\n",
-       "      <th>TCR.g.d</th>\n",
-       "      <th>TCRb</th>\n",
-       "      <th>Tim.3</th>\n",
-       "      <th>VISA</th>\n",
-       "      <th>Vimentin</th>\n",
-       "      <th>a.SMA</th>\n",
-       "      <th>b.Catenin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>75</td>\n",
-       "      <td>2</td>\n",
-       "      <td>42</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.792642</td>\n",
-       "      <td>0.617038</td>\n",
-       "      <td>0.000089</td>\n",
-       "      <td>0.000040</td>\n",
-       "      <td>0.000029</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.091339</td>\n",
-       "      <td>0.114237</td>\n",
-       "      <td>0.241829</td>\n",
-       "      <td>0.681727</td>\n",
-       "      <td>0.159092</td>\n",
-       "      <td>0.006533</td>\n",
-       "      <td>0.000454</td>\n",
-       "      <td>0.139826</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.057827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1767</td>\n",
-       "      <td>2</td>\n",
-       "      <td>63</td>\n",
-       "      <td>DC</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.127394</td>\n",
-       "      <td>0.062173</td>\n",
-       "      <td>0.660572</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.163511</td>\n",
-       "      <td>0.000193</td>\n",
-       "      <td>0.010475</td>\n",
-       "      <td>0.231264</td>\n",
-       "      <td>0.058234</td>\n",
-       "      <td>0.111610</td>\n",
-       "      <td>0.182849</td>\n",
-       "      <td>0.899717</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.267198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2545</td>\n",
-       "      <td>2</td>\n",
-       "      <td>29</td>\n",
-       "      <td>NK</td>\n",
-       "      <td>0.060620</td>\n",
-       "      <td>0.134818</td>\n",
-       "      <td>0.298522</td>\n",
-       "      <td>0.083348</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.170917</td>\n",
-       "      <td>0.000193</td>\n",
-       "      <td>0.033671</td>\n",
-       "      <td>0.201099</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.004900</td>\n",
-       "      <td>0.454174</td>\n",
-       "      <td>0.069180</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.104686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2899</td>\n",
-       "      <td>3</td>\n",
-       "      <td>64</td>\n",
-       "      <td>Monocyte</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.012896</td>\n",
-       "      <td>0.287698</td>\n",
-       "      <td>0.268121</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.052713</td>\n",
-       "      <td>0.005982</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.052230</td>\n",
-       "      <td>0.148087</td>\n",
-       "      <td>0.228221</td>\n",
-       "      <td>0.053541</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.283151</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3657</td>\n",
-       "      <td>3</td>\n",
-       "      <td>61</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.201057</td>\n",
-       "      <td>0.110590</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.026865</td>\n",
-       "      <td>0.011771</td>\n",
-       "      <td>0.124955</td>\n",
-       "      <td>0.154981</td>\n",
-       "      <td>0.597647</td>\n",
-       "      <td>0.013284</td>\n",
-       "      <td>0.000454</td>\n",
-       "      <td>0.234038</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145156</th>\n",
-       "      <td>152811</td>\n",
-       "      <td>2882</td>\n",
-       "      <td>8004</td>\n",
-       "      <td>119</td>\n",
-       "      <td>Neutrophil</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.523642</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.182044</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.205187</td>\n",
-       "      <td>0.098993</td>\n",
-       "      <td>0.790734</td>\n",
-       "      <td>0.878804</td>\n",
-       "      <td>0.067239</td>\n",
-       "      <td>0.082646</td>\n",
-       "      <td>0.671506</td>\n",
-       "      <td>0.455424</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.040877</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145157</th>\n",
-       "      <td>152812</td>\n",
-       "      <td>2893</td>\n",
-       "      <td>8004</td>\n",
-       "      <td>82</td>\n",
-       "      <td>Neutrophil</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.210238</td>\n",
-       "      <td>0.313372</td>\n",
-       "      <td>0.076860</td>\n",
-       "      <td>0.986128</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.211576</td>\n",
-       "      <td>0.143761</td>\n",
-       "      <td>0.801359</td>\n",
-       "      <td>0.500603</td>\n",
-       "      <td>0.069040</td>\n",
-       "      <td>0.077637</td>\n",
-       "      <td>0.327586</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.068794</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145158</th>\n",
-       "      <td>152813</td>\n",
-       "      <td>2327</td>\n",
-       "      <td>8004</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.620555</td>\n",
-       "      <td>0.000089</td>\n",
-       "      <td>0.025792</td>\n",
-       "      <td>0.000029</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.332249</td>\n",
-       "      <td>0.051137</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.752380</td>\n",
-       "      <td>0.806268</td>\n",
-       "      <td>0.250223</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.462049</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.086740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145159</th>\n",
-       "      <td>152814</td>\n",
-       "      <td>3371</td>\n",
-       "      <td>8003</td>\n",
-       "      <td>184</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.597890</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.099606</td>\n",
-       "      <td>0.000029</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.302916</td>\n",
-       "      <td>0.138358</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.899182</td>\n",
-       "      <td>0.362010</td>\n",
-       "      <td>0.142534</td>\n",
-       "      <td>0.086661</td>\n",
-       "      <td>0.963140</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.167498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145160</th>\n",
-       "      <td>152815</td>\n",
-       "      <td>7166</td>\n",
-       "      <td>8006</td>\n",
-       "      <td>53</td>\n",
-       "      <td>M2</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.030481</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.083704</td>\n",
-       "      <td>0.000058</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.203009</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.662786</td>\n",
-       "      <td>0.307816</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.373048</td>\n",
-       "      <td>0.000454</td>\n",
-       "      <td>0.110449</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>145161 rows × 54 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        cellLabel  X_cent  Y_cent  cellSize    cellType     BCL.2      CCR6  \\\n",
-       "0               1      75       2        42           B  0.792642  0.617038   \n",
-       "1               2    1767       2        63          DC  0.000000  0.127394   \n",
-       "2               3    2545       2        29          NK  0.060620  0.134818   \n",
-       "3               4    2899       3        64    Monocyte  0.000000  0.012896   \n",
-       "4               5    3657       3        61         CD4  0.201057  0.110590   \n",
-       "...           ...     ...     ...       ...         ...       ...       ...   \n",
-       "145156     152811    2882    8004       119  Neutrophil  0.000000  0.523642   \n",
-       "145157     152812    2893    8004        82  Neutrophil  0.000000  0.210238   \n",
-       "145158     152813    2327    8004        92       Other  0.000000  0.620555   \n",
-       "145159     152814    3371    8003       184         CD4  0.000000  0.597890   \n",
-       "145160     152815    7166    8006        53          M2  0.000000  0.030481   \n",
-       "\n",
-       "           CD11b     CD11c      CD15  ...     PD.L1  Podoplanin     T.bet  \\\n",
-       "0       0.000089  0.000040  0.000029  ...  0.091339    0.114237  0.241829   \n",
-       "1       0.062173  0.660572  0.000000  ...  0.163511    0.000193  0.010475   \n",
-       "2       0.298522  0.083348  0.000000  ...  0.170917    0.000193  0.033671   \n",
-       "3       0.287698  0.268121  0.000000  ...  0.052713    0.005982  0.000000   \n",
-       "4       0.000000  0.000000  0.000000  ...  0.026865    0.011771  0.124955   \n",
-       "...          ...       ...       ...  ...       ...         ...       ...   \n",
-       "145156  1.000000  0.182044  1.000000  ...  0.205187    0.098993  0.790734   \n",
-       "145157  0.313372  0.076860  0.986128  ...  0.211576    0.143761  0.801359   \n",
-       "145158  0.000089  0.025792  0.000029  ...  0.332249    0.051137  1.000000   \n",
-       "145159  0.000000  0.099606  0.000029  ...  0.302916    0.138358  1.000000   \n",
-       "145160  0.000000  0.083704  0.000058  ...  0.203009    0.000000  0.662786   \n",
-       "\n",
-       "         TCR.g.d      TCRb     Tim.3      VISA  Vimentin  a.SMA  b.Catenin  \n",
-       "0       0.681727  0.159092  0.006533  0.000454  0.139826    0.0   0.057827  \n",
-       "1       0.231264  0.058234  0.111610  0.182849  0.899717    0.0   0.267198  \n",
-       "2       0.201099  0.000000  0.004900  0.454174  0.069180    0.0   0.104686  \n",
-       "3       0.000000  0.052230  0.148087  0.228221  0.053541    1.0   0.283151  \n",
-       "4       0.154981  0.597647  0.013284  0.000454  0.234038    0.0   0.000000  \n",
-       "...          ...       ...       ...       ...       ...    ...        ...  \n",
-       "145156  0.878804  0.067239  0.082646  0.671506  0.455424    0.0   0.040877  \n",
-       "145157  0.500603  0.069040  0.077637  0.327586  1.000000    0.0   0.068794  \n",
-       "145158  0.752380  0.806268  0.250223  1.000000  0.462049    0.0   0.086740  \n",
-       "145159  0.899182  0.362010  0.142534  0.086661  0.963140    0.0   0.167498  \n",
-       "145160  0.307816  0.000000  0.373048  0.000454  0.110449    0.0   0.000000  \n",
-       "\n",
-       "[145161 rows x 54 columns]"
+       "Index(['cellLabel', 'X_cent', 'Y_cent', 'cellSize', 'cellType', 'BCL.2',\n",
+       "       'CCR6', 'CD11b', 'CD11c', 'CD15', 'CD16', 'CD162', 'CD163', 'CD2',\n",
+       "       'CD20', 'CD206', 'CD25', 'CD30', 'CD31', 'CD4', 'CD44', 'CD45RA',\n",
+       "       'CD45RO', 'CD45', 'CD5', 'CD56', 'CD57', 'CD68', 'CD69', 'CD7', 'CD8',\n",
+       "       'Collagen.4', 'Cytokeratin', 'DAPI.01', 'EGFR', 'FoxP3', 'Granzyme.B',\n",
+       "       'HLA.DR', 'IDO.1', 'LAG.3', 'MCT', 'MMP.9', 'MUC.1', 'PD.1', 'PD.L1',\n",
+       "       'Podoplanin', 'T.bet', 'TCR.g.d', 'TCRb', 'Tim.3', 'VISA', 'Vimentin',\n",
+       "       'a.SMA', 'b.Catenin'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
