new runnign script for classic ml for pipelining

--- a/src/apply_gridsearch.ipynb
+++ b/src/apply_gridsearch.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from models_classes.gridsearch import Tune_Eval"
+    "from models_classes.gridsearch import ModelTunerEvaluator"
    ]
   },
   {
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "cHL2 = Tune_Eval(rs, model='xgboost', min_child_weight=2)"
+    "cHL2 = ModelTunerEvaluator(rs, model='xgboost', min_child_weight=2)"
    ]
   },
   {
