--- a/src/preprocessing/datasets/process_cHL2.ipynb
+++ b/src/preprocessing/datasets/process_cHL2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_list=[]\n",
-    "for csv in os.listdir('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_2_MIBI/quantification/'):\n",
+    "for csv in os.listdir('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/cHL_2_MIBI/quantification/'):\n",
     "    if csv.endswith('.csv') and not csv.startswith('.'):\n",
-    "        df = pd.read_csv(os.path.join('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/Maps_data/cHL_2_MIBI/quantification/', csv))\n",
+    "        df = pd.read_csv(os.path.join('/Volumes/Lukas_SSD/phenotyping_benchmark/datasets/cHL_2_MIBI/quantification/', csv))\n",
     "        df['csv'] = [csv for _ in range(len(df))]\n",
     "        columns = df.columns.tolist()\n",
     "        new_order = columns[6:] + columns[:6]\n",
@@ -93,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing for STELLAR without coordinate drop\n",
-    "df.drop(columns=['Annotation_num', 'cellLabel'], inplace=True)\n",
+    "df.drop(columns=['Annotation_num'], inplace=True)\n",
     "df.rename(columns={'Annotation': 'cell_type', 'X_cent': 'x', 'Y_cent': 'y'}, inplace=True)\n",
     "df = reorder_columns(df, 'y', 'cellSize')\n",
     "df = reorder_columns(df, 'x', 'cellSize')\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,6 +229,66 @@
    "source": [
     "sc.pl.rank_genes_groups_dotplot(adata, n_genes=5, standard_scale='var', key='rank_genes_groups_filtered')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Harmonization of celltype labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cell_type'] = df['cell_type'].replace({'CD4 T':'CD4+_T_cell', 'CD4 Treg':'Treg', 'B':'B_cell', 'M2':'M2_Macrophage', 'DC':'Dendritic_cell', 'CD8 T':'CD8+_T_cell',\n",
+    "                                           'Tumor':'Cancer', 'M1':'M1_Macrophage', 'NK':'NK_cell', 'Other':'unedfined'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
