--- a/src/preprocessing/datasets/process_IMMUcan.ipynb
+++ b/src/preprocessing/datasets/process_IMMUcan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
@@ -298,26 +298,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['MPO', 'HistoneH3', 'SMA', 'CD16', 'CD38', 'HLADR', 'CD27', 'CD15',\n",
-       "       'CD45RA', 'CD163', 'B2M', 'CD20', 'CD68', 'Ido1', 'CD3', 'LAG3',\n",
-       "       'CD11c', 'PD1', 'PDGFRb', 'CD7', 'GrzB', 'PDL1', 'TCF7', 'CD45RO',\n",
-       "       'FOXP3', 'ICOS', 'CD8a', 'CarbonicAnhydrase', 'CD33', 'Ki67', 'VISTA',\n",
-       "       'CD40', 'CD4', 'CD14', 'Ecad', 'CD303', 'CD206', 'cleavedPARP', 'DNA1',\n",
-       "       'DNA2', 'image', 'sample_id', 'ObjectNumber', 'x', 'y', 'area',\n",
-       "       'major_axis_length', 'minor_axis_length', 'eccentricity', 'width_px',\n",
-       "       'height_px', 'cell_labels', 'cell_type'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.columns"
    ]
@@ -343,7 +324,216 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan/IMMUcan_quantification.csv', index=False)"
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implement different levels of granularity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_2_cell_type'] = df['cell_type']\n",
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'CD8+_T_cell':'Lymphoid_immune', 'M2_Macrophage':'Myeloid_immune', 'CD4+_T_cell':'Lymphoid_immune', 'Plasma_cell':'Lymphoid_immune',\n",
+    "                                                           'Neutrophil':'Myeloid_immune', 'BnT':'Lymphoid_immune', 'Treg':'Lymphoid_immune', 'Dendritic_cell':'Myeloid_immune', 'B_cell':'Lymphoid_immune',\n",
+    "                                                           'NK_cell':'Lymphoid_immune', 'Plasmacytoid_dendritic_cell':'Myeloid_immune'})\n",
+    "df['level_2_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_1_cell_type'] = df['level_2_cell_type']\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'Lymphoid_immune':'Immune', 'Myeloid_immune':'Immune', 'Stroma':'Stromal'})\n",
+    "df['level_1_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = reorder_columns(df, 'cell_type', 'level_1_cell_type')\n",
+    "df = reorder_columns(df, 'level_2_cell_type', 'level_1_cell_type')\n",
+    "df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encode uninfomrative variables with different dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['MPO', 'HistoneH3', 'SMA', 'CD16', 'CD38', 'HLADR', 'CD27', 'CD15',\n",
+       "       'CD45RA', 'CD163', 'B2M', 'CD20', 'CD68', 'Ido1', 'CD3', 'LAG3',\n",
+       "       'CD11c', 'PD1', 'PDGFRb', 'CD7', 'GrzB', 'PDL1', 'TCF7', 'CD45RO',\n",
+       "       'FOXP3', 'ICOS', 'CD8a', 'CarbonicAnhydrase', 'CD33', 'Ki67', 'VISTA',\n",
+       "       'CD40', 'CD4', 'CD14', 'Ecad', 'CD303', 'CD206', 'cleavedPARP', 'DNA1',\n",
+       "       'DNA2', 'image', 'sample_id', 'ObjectNumber', 'x', 'y', 'area',\n",
+       "       'major_axis_length', 'minor_axis_length', 'eccentricity', 'width_px',\n",
+       "       'height_px', 'cell_labels', 'level_1_cell_type', 'level_2_cell_type',\n",
+       "       'cell_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MPO                  float64\n",
+       "HistoneH3            float64\n",
+       "SMA                  float64\n",
+       "CD16                 float64\n",
+       "CD38                 float64\n",
+       "HLADR                float64\n",
+       "CD27                 float64\n",
+       "CD15                 float64\n",
+       "CD45RA               float64\n",
+       "CD163                float64\n",
+       "B2M                  float64\n",
+       "CD20                 float64\n",
+       "CD68                 float64\n",
+       "Ido1                 float64\n",
+       "CD3                  float64\n",
+       "LAG3                 float64\n",
+       "CD11c                float64\n",
+       "PD1                  float64\n",
+       "PDGFRb               float64\n",
+       "CD7                  float64\n",
+       "GrzB                 float64\n",
+       "PDL1                 float64\n",
+       "TCF7                 float64\n",
+       "CD45RO               float64\n",
+       "FOXP3                float64\n",
+       "ICOS                 float64\n",
+       "CD8a                 float64\n",
+       "CarbonicAnhydrase    float64\n",
+       "CD33                 float64\n",
+       "Ki67                 float64\n",
+       "VISTA                float64\n",
+       "CD40                 float64\n",
+       "CD4                  float64\n",
+       "CD14                 float64\n",
+       "Ecad                 float64\n",
+       "CD303                float64\n",
+       "CD206                float64\n",
+       "cleavedPARP          float64\n",
+       "DNA1                 float64\n",
+       "DNA2                 float64\n",
+       "image                 object\n",
+       "sample_id             object\n",
+       "ObjectNumber           int64\n",
+       "x                    float64\n",
+       "y                    float64\n",
+       "area                   int64\n",
+       "major_axis_length    float64\n",
+       "minor_axis_length    float64\n",
+       "eccentricity         float64\n",
+       "width_px               int64\n",
+       "height_px              int64\n",
+       "cell_labels           object\n",
+       "level_1_cell_type     object\n",
+       "level_2_cell_type     object\n",
+       "cell_type             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['image','x', 'y', 'sample_id', 'ObjectNumber']] = df[['image','x', 'y', 'sample_id', 'ObjectNumber']].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/IMMUcan_quantification.csv', index=False)"
    ]
   },
   {
