--- a/src/preprocessing/datasets/process_cHL2.ipynb
+++ b/src/preprocessing/datasets/process_cHL2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
@@ -284,11 +284,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implement different levels of granularity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_2_cell_type'] = df['cell_type']\n",
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'CD4+_T_cell':'Lymphoid_immune', 'CD8+_T_cell': 'Lymphoid_immune', 'M2_Macrophage':'Myeloid_immune', 'B_cell':'Lymphoid_immune',\n",
+    "                                                           'Dendritic_cell':'Myeloid_immune', 'Treg':'Lymphoid_immune', 'NK_cell':'Lymphoid_immune',\n",
+    "                                                           'Endothelial':'Vascular', 'Neutrophil':'Myeloid_immune', 'M1_Macrophage':'Myeloid_immune',})\n",
+    "df['level_2_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_1_cell_type'] = df['level_2_cell_type']\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'Lymphoid_immune':'Immune', 'Myeloid_immune':'Immune', 'Vascular':'Stromal'})\n",
+    "df['level_1_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = reorder_columns(df, 'cell_type', 'level_1_cell_type')\n",
+    "df = reorder_columns(df, 'level_2_cell_type', 'level_1_cell_type')\n",
+    "df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encode uninfomrative variables with different dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CD45', 'CD20', 'dsDNA', 'pSLP-76', 'SLP-76', 'anti-H2AX (pS139)',\n",
+       "       'CD163', 'Histone H3', 'CD45RO', 'CD28', 'CD153 (CD30L)', 'Lag3', 'CD4',\n",
+       "       'CD11c', 'CD56', 'FoxP3', 'GATA3', 'Granzyme B', 'PD-L1', 'CD16',\n",
+       "       'Ki-67', 'PD-1', 'Pax-5', 'Tox', 'CD161', 'CD68', 'B2-Microglobulin',\n",
+       "       'CD8', 'CD3', 'HLA1', 'CD15', 'Tbet', 'CD14', 'CD123', 'CXCR5',\n",
+       "       'CD45RA', 'HLA-DR', 'CD57', 'IL-10', 'CD30', 'TIM3', 'RORgT', 'TCRgd',\n",
+       "       'CD86', 'CD25', 'Na-K ATPase', 'cellLabel', 'cellSize', 'x', 'y', 'csv',\n",
+       "       'level_1_cell_type', 'level_2_cell_type', 'cell_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CD45                 float64\n",
+       "CD20                 float64\n",
+       "dsDNA                float64\n",
+       "pSLP-76              float64\n",
+       "SLP-76               float64\n",
+       "anti-H2AX (pS139)    float64\n",
+       "CD163                float64\n",
+       "Histone H3           float64\n",
+       "CD45RO               float64\n",
+       "CD28                 float64\n",
+       "CD153 (CD30L)        float64\n",
+       "Lag3                 float64\n",
+       "CD4                  float64\n",
+       "CD11c                float64\n",
+       "CD56                 float64\n",
+       "FoxP3                float64\n",
+       "GATA3                float64\n",
+       "Granzyme B           float64\n",
+       "PD-L1                float64\n",
+       "CD16                 float64\n",
+       "Ki-67                float64\n",
+       "PD-1                 float64\n",
+       "Pax-5                float64\n",
+       "Tox                  float64\n",
+       "CD161                float64\n",
+       "CD68                 float64\n",
+       "B2-Microglobulin     float64\n",
+       "CD8                  float64\n",
+       "CD3                  float64\n",
+       "HLA1                 float64\n",
+       "CD15                 float64\n",
+       "Tbet                 float64\n",
+       "CD14                 float64\n",
+       "CD123                float64\n",
+       "CXCR5                float64\n",
+       "CD45RA               float64\n",
+       "HLA-DR               float64\n",
+       "CD57                 float64\n",
+       "IL-10                float64\n",
+       "CD30                 float64\n",
+       "TIM3                 float64\n",
+       "RORgT                float64\n",
+       "TCRgd                float64\n",
+       "CD86                 float64\n",
+       "CD25                 float64\n",
+       "Na-K ATPase          float64\n",
+       "cellLabel              int64\n",
+       "cellSize               int64\n",
+       "x                      int64\n",
+       "y                      int64\n",
+       "csv                   object\n",
+       "level_1_cell_type     object\n",
+       "level_2_cell_type     object\n",
+       "cell_type             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['cellLabel','x', 'y']] = df[['cellLabel','x', 'y']].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_2_MIBI_quantification.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
