--- a/src/preprocessing/datasets/process_cHL_CODEX.ipynb
+++ b/src/preprocessing/datasets/process_cHL_CODEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +275,198 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implement different levels of granularity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_2_cell_type'] = df['cell_type']\n",
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'CD4+_T_cell':'Lymphoid_immune', 'CD8+_T_cell':'Lymphoid_immune', 'B_cell':'Lymphoid_immune', 'Dendritic_cell':'Myeloid_immune',\n",
+    "                                                           'Endothelial':'Vascular', 'NK_cell':'Lymphoid_immune', 'M2_Macrophage':'Myeloid_immune', 'Monocyte':'Myeloid_immune',\n",
+    "                                                           'Lymphatic':'Vascular', 'Neutrophil':'Myeloid_immune', 'Treg':'Lymphoid_immune', 'Mast_cell':'Myeloid_immune',\n",
+    "                                                           'M1_Macrophage':'Myeloid_immune', 'Cytotoxic_CD8+_T_cell':'Lymphoid_immune'})\n",
+    "df['level_2_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_1_cell_type'] = df['level_2_cell_type']\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'Lymphoid_immune':'Immune', 'Myeloid_immune':'Immune', 'Vascular':'Stromal'})\n",
+    "df['level_1_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = reorder_columns(df, 'cell_type', 'level_1_cell_type')\n",
+    "df = reorder_columns(df, 'level_2_cell_type', 'level_1_cell_type')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encode uninfomrative variables with different dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['BCL.2', 'CCR6', 'CD11b', 'CD11c', 'CD15', 'CD16', 'CD162', 'CD163',\n",
+       "       'CD2', 'CD20', 'CD206', 'CD25', 'CD30', 'CD31', 'CD4', 'CD44', 'CD45RA',\n",
+       "       'CD45RO', 'CD45', 'CD5', 'CD56', 'CD57', 'CD68', 'CD69', 'CD7', 'CD8',\n",
+       "       'Collagen.4', 'Cytokeratin', 'DAPI.01', 'EGFR', 'FoxP3', 'Granzyme.B',\n",
+       "       'HLA.DR', 'IDO.1', 'LAG.3', 'MCT', 'MMP.9', 'MUC.1', 'PD.1', 'PD.L1',\n",
+       "       'Podoplanin', 'T.bet', 'TCR.g.d', 'TCRb', 'Tim.3', 'VISA', 'Vimentin',\n",
+       "       'a.SMA', 'b.Catenin', 'cellLabel', 'cellSize', 'x', 'y',\n",
+       "       'level_1_cell_type', 'level_2_cell_type', 'cell_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_CODEX_quantification.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BCL.2                float64\n",
+       "CCR6                 float64\n",
+       "CD11b                float64\n",
+       "CD11c                float64\n",
+       "CD15                 float64\n",
+       "CD16                 float64\n",
+       "CD162                float64\n",
+       "CD163                float64\n",
+       "CD2                  float64\n",
+       "CD20                 float64\n",
+       "CD206                float64\n",
+       "CD25                 float64\n",
+       "CD30                 float64\n",
+       "CD31                 float64\n",
+       "CD4                  float64\n",
+       "CD44                 float64\n",
+       "CD45RA               float64\n",
+       "CD45RO               float64\n",
+       "CD45                 float64\n",
+       "CD5                  float64\n",
+       "CD56                 float64\n",
+       "CD57                 float64\n",
+       "CD68                 float64\n",
+       "CD69                 float64\n",
+       "CD7                  float64\n",
+       "CD8                  float64\n",
+       "Collagen.4           float64\n",
+       "Cytokeratin          float64\n",
+       "DAPI.01              float64\n",
+       "EGFR                 float64\n",
+       "FoxP3                float64\n",
+       "Granzyme.B           float64\n",
+       "HLA.DR               float64\n",
+       "IDO.1                float64\n",
+       "LAG.3                float64\n",
+       "MCT                  float64\n",
+       "MMP.9                float64\n",
+       "MUC.1                float64\n",
+       "PD.1                 float64\n",
+       "PD.L1                float64\n",
+       "Podoplanin           float64\n",
+       "T.bet                float64\n",
+       "TCR.g.d              float64\n",
+       "TCRb                 float64\n",
+       "Tim.3                float64\n",
+       "VISA                 float64\n",
+       "Vimentin             float64\n",
+       "a.SMA                float64\n",
+       "b.Catenin            float64\n",
+       "cellLabel              int64\n",
+       "cellSize               int64\n",
+       "x                      int64\n",
+       "y                      int64\n",
+       "level_1_cell_type     object\n",
+       "level_2_cell_type     object\n",
+       "cell_type             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['cellLabel','x', 'y']] = df[['cellLabel','x', 'y']].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
