--- a/src/preprocessing/datasets/process_cHL1.ipynb
+++ b/src/preprocessing/datasets/process_cHL1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
@@ -256,6 +256,419 @@
    "source": [
     "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_1_MIBI_quantification.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implement different levels of granularity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cell_type\n",
+       "CD4+_T_cell              457232\n",
+       "CD8+_T_cell              254045\n",
+       "M2_Macrophage            223290\n",
+       "B_cell                   203862\n",
+       "undefined                131420\n",
+       "Dendritic_cell           113181\n",
+       "Cytotoxic_CD4+_T_cell     70305\n",
+       "Treg                      63262\n",
+       "Cancer                    57917\n",
+       "NK_cell                   29376\n",
+       "Endothelial               24260\n",
+       "Neutrophil                18490\n",
+       "M1_Macrophage             13417\n",
+       "Cytotoxic_CD8+_T_cell      9796\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_1_MIBI_quantification.csv')\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CD45                 float64\n",
+       "CD20                 float64\n",
+       "CD163                float64\n",
+       "Histone H3           float64\n",
+       "CD45RO               float64\n",
+       "CD28                 float64\n",
+       "CD153 (CD30L)        float64\n",
+       "Lag3                 float64\n",
+       "CD4                  float64\n",
+       "CD11c                float64\n",
+       "CD56                 float64\n",
+       "FoxP3                float64\n",
+       "GATA3                float64\n",
+       "Granzyme B           float64\n",
+       "PD-L1                float64\n",
+       "CD16                 float64\n",
+       "Ki-67                float64\n",
+       "PD-1                 float64\n",
+       "Pax-5                float64\n",
+       "Tox                  float64\n",
+       "CD161                float64\n",
+       "CD68                 float64\n",
+       "B2-Microglobulin     float64\n",
+       "CD8                  float64\n",
+       "CD3                  float64\n",
+       "HLA1                 float64\n",
+       "CD15                 float64\n",
+       "Tbet                 float64\n",
+       "CD14                 float64\n",
+       "CXCR5                float64\n",
+       "CD45RA               float64\n",
+       "HLA-DR               float64\n",
+       "CD57                 float64\n",
+       "IL-10                float64\n",
+       "CD30                 float64\n",
+       "TIM3                 float64\n",
+       "RORgT                float64\n",
+       "TCRgd                float64\n",
+       "CD86                 float64\n",
+       "CD25                 float64\n",
+       "Na-K ATPase          float64\n",
+       "cellSize               int64\n",
+       "x                      int64\n",
+       "y                      int64\n",
+       "identifier             int64\n",
+       "cellLabel              int64\n",
+       "level_1_cell_type     object\n",
+       "level_2_cell_type     object\n",
+       "cell_type             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cellLabel</th>\n",
+       "      <th>identifier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26325</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1669848</th>\n",
+       "      <td>72620</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1669849</th>\n",
+       "      <td>73041</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1669850</th>\n",
+       "      <td>73508</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1669851</th>\n",
+       "      <td>73541</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1669852</th>\n",
+       "      <td>74539</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1669853 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         cellLabel  identifier\n",
+       "0            26325          31\n",
+       "1                5          31\n",
+       "2                7          31\n",
+       "3                8          31\n",
+       "4                9          31\n",
+       "...            ...         ...\n",
+       "1669848      72620           6\n",
+       "1669849      73041           6\n",
+       "1669850      73508           6\n",
+       "1669851      73541           6\n",
+       "1669852      74539           6\n",
+       "\n",
+       "[1669853 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['cellLabel', 'identifier']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['cell_type'] = df['cell_type'].replace({'CD8+T_cell':'CD8+_T_cell'})\n",
+    "df['cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_2_cell_type'] = df['cell_type']\n",
+    "df['level_2_cell_type'] = df['level_2_cell_type'].replace({'CD4+_T_cell':'Lymphoid_immune', 'CD8+_T_cell': 'Lymphoid_immune', 'M2_Macrophage':'Myeloid_immune', 'B_cell':'Lymphoid_immune',\n",
+    "                                                           'Dendritic_cell':'Myeloid_immune', 'Cytotoxic_CD4+_T_cell':'Lymphoid_immune', 'Treg':'Lymphoid_immune', 'NK_cell':'Lymphoid_immune',\n",
+    "                                                           'Endothelial':'Vascular', 'Neutrophil':'Myeloid_immune', 'M1_Macrophage':'Myeloid_immune', 'Cytotoxic_CD8+_T_cell':'Lymphoid_immune'})\n",
+    "df['level_2_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['level_1_cell_type'] = df['level_2_cell_type']\n",
+    "df['level_1_cell_type'] = df['level_1_cell_type'].replace({'Lymphoid_immune':'Immune', 'Myeloid_immune':'Immune', 'Vascular':'Stromal'})\n",
+    "df['level_1_cell_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = reorder_columns(df, 'cell_type', 'level_1_cell_type')\n",
+    "df = reorder_columns(df, 'level_2_cell_type', 'level_1_cell_type')\n",
+    "df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_1_MIBI_quantification.csv', index=False) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encode uninfomrative variables with different dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CD45', 'CD20', 'CD163', 'Histone H3', 'CD45RO', 'CD28',\n",
+       "       'CD153 (CD30L)', 'Lag3', 'CD4', 'CD11c', 'CD56', 'FoxP3', 'GATA3',\n",
+       "       'Granzyme B', 'PD-L1', 'CD16', 'Ki-67', 'PD-1', 'Pax-5', 'Tox', 'CD161',\n",
+       "       'CD68', 'B2-Microglobulin', 'CD8', 'CD3', 'HLA1', 'CD15', 'Tbet',\n",
+       "       'CD14', 'CXCR5', 'CD45RA', 'HLA-DR', 'CD57', 'IL-10', 'CD30', 'TIM3',\n",
+       "       'RORgT', 'TCRgd', 'CD86', 'CD25', 'Na-K ATPase', 'cellSize', 'x', 'y',\n",
+       "       'identifier', 'cellLabel', 'level_1_cell_type', 'level_2_cell_type',\n",
+       "       'cell_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_1_MIBI_quantification.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CD45                 float64\n",
+       "CD20                 float64\n",
+       "CD163                float64\n",
+       "Histone H3           float64\n",
+       "CD45RO               float64\n",
+       "CD28                 float64\n",
+       "CD153 (CD30L)        float64\n",
+       "Lag3                 float64\n",
+       "CD4                  float64\n",
+       "CD11c                float64\n",
+       "CD56                 float64\n",
+       "FoxP3                float64\n",
+       "GATA3                float64\n",
+       "Granzyme B           float64\n",
+       "PD-L1                float64\n",
+       "CD16                 float64\n",
+       "Ki-67                float64\n",
+       "PD-1                 float64\n",
+       "Pax-5                float64\n",
+       "Tox                  float64\n",
+       "CD161                float64\n",
+       "CD68                 float64\n",
+       "B2-Microglobulin     float64\n",
+       "CD8                  float64\n",
+       "CD3                  float64\n",
+       "HLA1                 float64\n",
+       "CD15                 float64\n",
+       "Tbet                 float64\n",
+       "CD14                 float64\n",
+       "CXCR5                float64\n",
+       "CD45RA               float64\n",
+       "HLA-DR               float64\n",
+       "CD57                 float64\n",
+       "IL-10                float64\n",
+       "CD30                 float64\n",
+       "TIM3                 float64\n",
+       "RORgT                float64\n",
+       "TCRgd                float64\n",
+       "CD86                 float64\n",
+       "CD25                 float64\n",
+       "Na-K ATPase          float64\n",
+       "cellSize               int64\n",
+       "x                      int64\n",
+       "y                      int64\n",
+       "identifier             int64\n",
+       "cellLabel              int64\n",
+       "level_1_cell_type     object\n",
+       "level_2_cell_type     object\n",
+       "cell_type             object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['cellLabel','x', 'y', 'identifier']] = df[['cellLabel','x', 'y', 'identifier']].astype('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/datasets/cHL_1_MIBI_quantification.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
